<resources>
    <string name="app_name">Road Incidents</string>
    <string name="button_addIncident">Add Incident</string>
    <string name="hint_incidentTitle">Incident Title</string>
    <string name="hint_incidentDescription">Description</string>
    <string name="hint_incidentNumVehicles">Number of Vehicles</string>
    <string name="hint_login">Username</string>
    <string name="hint_password">Password</string>
    <string name="menu_addIncident">Add</string>
    <string name="menu_cancelIncident">Cancel</string>
    <string name="enter_incident_title">Please enter a incident Title</string>
    <string name="save_incident">Save incident</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_incident_image">Select incident image</string>
    <string name="change_incident_image">Change incident image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteIncident">Delete</string>
    <string name="title_activity_incident_maps">Map of All Incidents</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>